# libdash

./: .dockerignore  .gitignore  .travis.yml  COPYING  ChangeLog  Dockerfile  GUIDE.md  MANIFEST.in  Makefile  Makefile.am  README.md  TODO.md  ast.ml  compile.ml  configure.ac  dash.ml  dune  dune-project  dune-workspace  ldconfig.sh  libdash.opam  libdash_install.sh  mk_dot_install.sh  pyproject.toml  round_trip.sh  setup.py  test.c  version.sh
.github/workflows/: build.yml  canary.yml
debian/: ash.dirs  ash.postinst  ash.postrm  bsdyacc  control  copyright  dash.config  dash.postinst  dash.prerm  dash.templates  rules
debian/po/: POTFILES.in  da.po  de.po  es.po  fr.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot
libdash/: .gitignore  __init__.py  parser.py  printer.py
ocaml/: .gitignore  LICENSE  META  Makefile  ast.ml  ast.mli  ast_atd.atd  compile.ml  dash.ml  dash.mli  dune  expansion.ml  function_description.ml  json_to_shell.ml  main.ml  mk_meta.sh  rt.sh  shell_to_json.ml  type_description.ml
python/: .gitignore  ArgCharStack.c  LICENSE  Makefile  Stack2.c  arg_char.c  ast.c  ast.py  ast2a.c  ast2json.c  ast2shell.py  dash.c  dash2.c  json_to_shell.c  json_to_shell2.c  libdash  parse_to_ast.py  parse_to_json.c  parse_to_json2.c  pretty.c  rt.py  test_rt.sh  test_rt_py.sh
python/json-c-0.15/: .gitignore
python/libdash/: ast.py  parser.py  printer.py
src/: .gitignore  Makefile.am  TOUR  alias.c  alias.h  arith.y  arith_lex.l  arith_yacc.c  arith_yylex.c  builtins.def  builtins.def.in  cd.c  cd.h  dash.1  error.c  error.h  eval.c  eval.h  exec.c  exec.h  expand.c  expand.h  histedit.c  input.c  input.h  jobs.c  jobs.h  mail.c  mail.h  main.c  main.h  memalloc.c  memalloc.h  miscbltin.c  mkbuiltins  mkinit.c  mknodes.c  mksignames.c  mksyntax.c  mktokens  (+22 more)
src/bltin/: bltin.h  echo.1  printf.1  printf.c  test.1  test.c  times.c
test/: .gitignore  Makefile  README.md  round_trip.sh  test.ml  test_ocaml_python.sh  weird_tilde.sh
test/failing/: aaaa_single
test/pash_tests/: mk_dot_install.sh  round_trip.sh
test/tests/: aaaa  array.sh  nested_shell_in_subshell.sh  single_quoted_dollar_sign.sh
