opam-version: "2.0"
name: "libdash"
version: "0.2.2"
synopsis: "Bindings to the dash shell's parser"
maintainer: "Michael Greenberg <michael.greenberg@pomona.edu>"
authors: "Michael Greenberg <michael.greenberg@pomona.edu>"
license: "BSD"
homepage: "https://github.com/mgree/libdash"
bug-reports: "https://github.com/mgree/libdash/issues"
depends: [
  "ocaml" {>= "4.0.7"}
  "ocamlfind" {>= "1.8.0"}
  "ctypes" {>= "0.11.5"}
  "ctypes-foreign" {>= "0.4.0"}
  "conf-autoconf" {build}
#  "conf-libtool" {build}
]
build: [
  ["libtoolize"] {os != "macos"}
  ["glibtoolize"] {os = "macos"}
  ["aclocal"]
  ["autoheader"]
  ["automake" "--add-missing"]
  ["autoconf"]
  ["mkdir" "_build"]
  ["./configure" "--prefix=%{build}%/_build"]
  [make]
  [make "install"] # into _build
  [make "-C" "ocaml" "all"]
  ["./mk_dot_install.sh"] # PICK UP HERE: don't leave it to OPAM to install these :(
]
#run-test: [
#  [make "-C" "test" "test"]
#]
dev-repo: "git+https:///github.com/mgree/libdash"
