opam-version: "2.0"
synopsis: "Bindings to the dash shell's parser"
maintainer: "Michael Greenberg <michael.greenberg@pomona.edu>"
authors: "Michael Greenberg <michael.greenberg@pomona.edu>"
license: "BSD-3-Clause"
homepage: "https://github.com/mgree/libdash"
bug-reports: "https://github.com/mgree/libdash/issues"
depends: [
  "ocaml" {>= "4.07"}
  "ocamlfind" {>= "1.8.0"}
  "ctypes" {>= "0.18.0"}
  "ctypes-foreign" {>= "0.18.0"}
  "atdgen" {>= "2.3.2"}
  "conf-autoconf" {build}
  "conf-aclocal" {build}
  "conf-automake" {build}
  "conf-libtool" {build}
]
dev-repo: "git+https:///github.com/mgree/libdash"
url {
  src: "https://github.com/mgree/libdash/archive/v0.3.tar.gz"
}

