[project]
name = "libdash"
version = "0.3.1"
authors = [
  { name="Michael Greenberg", email="michael@greenberg.science" },
]
description = "Bindings for the dash shell as a library"
readme = "README.md"
license = { file="COPYING" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: System Shells",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
]

[project.urls]
"Homepage" = "https://github.com/mgree/libdash"
"Bug Tracker" = "https://github.com/mgree/libdash/issues"

[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"
